Fix bg colour not showing after scroll

--- a/public/style.css
+++ b/public/style.css
@@ -1,12 +1,10 @@
 html, body {
-    width: 100%;
     height: 100%;
+    background-color: #f5f5f5 !important;
 }
 
 body {
-    background-color: #f5f5f5;
-    width: 100%;
-    height: 100%;
+    min-height: 100vh;
     background-attachment: fixed;
 }
 
